grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      seq(
        choice(
          $.definition_statement,
          $.manipulation_statement,
          $.migration_statement,
          $.system_statement,
          $.batch_statement,
          $.transaction_statement,
        ),
        ";",
      ),

    // ==========================================
    // 1. Schema Definitions (DDL)
    // ==========================================

    definition_statement: ($) =>
      choice(
        $.define_namespace,
        $.define_enum,
        $.define_field,
        $.define_role,
        $.define_struct,
        $.define_trait,
        $.define_node,
        $.define_edge,
        $.define_index,
      ),

    define_namespace: ($) =>
      seq(
        "DEFINE",
        "NAMESPACE",
        field("name", $.namespace_identifier),
        optional(seq("STRICT_MODE", "=", $.boolean_literal)),
      ),

    define_enum: ($) =>
      seq(
        "DEFINE",
        "ENUM",
        field("name", $.identifier),
        "{",
        commaSepTrailing(field("value", $.identifier)),
        "}",
      ),

    define_field: ($) =>
      seq(
        "DEFINE",
        "FIELD",
        field("name", $.identifier),
        ":",
        field("type", $._data_type),
        optional("?"),
        repeat($.decorator),
      ),

    define_node: ($) =>
      seq(
        "DEFINE",
        optional("ABSTRACT"),
        "NODE",
        field("name", $.identifier),
        optional($.extends_clause),
        $.schema_body,
        optional($.constraint_block),
      ),

    define_edge: ($) =>
      seq(
        "DEFINE",
        optional("ABSTRACT"),
        "EDGE",
        field("name", $.identifier),
        optional($.extends_clause),
        $.schema_body,
        optional($.constraint_block),
      ),

    extends_clause: ($) => seq("EXTENDS", "[", commaSep1($.identifier), "]"),

    schema_body: ($) =>
      seq(
        "{",
        commaSepTrailing(choice($.role_definition, $.field_definition, $.identifier, $.comment)),
        "}",
      ),

    role_definition: ($) =>
      choice(
        seq(
          field("name", $.identifier),
          optional("?"),
          ":",
          optional(field("direction", choice("<-", "->", "<->"))),
          field("role_type", $.identifier),
          field("cardinality", choice("(ONE)", "(MANY)")),
          repeat($.decorator),
        ),
        seq(
          field("name", $.identifier),
          optional("?"),
          field("direction", choice("<-", "->", "<->")),
          field("cardinality", choice("(ONE)", "(MANY)")),
          repeat($.decorator),
        ),
      ),

    migration_statement: ($) =>
      choice($.validate_migration, $.migrate, $.alter),

    alter: ($) =>
      seq(
        "ALTER",
        choice("NODE", "EDGE"),
        $.identifier,
        "{",
        commaSepTrailing(
          choice(
            seq("ADD", $.identifier),
            seq("DROP", $.identifier),
            seq("RENAME", $.identifier, "TO", $.identifier),
            seq("ADD", "CONSTRAINT", $.identifier, ":", $._expression),
          ),
        ),
        "}",
      ),

    _expression: ($) =>
      choice(
        $.identifier,
        $.variable,
        $._literal,
        $.function_call,
        $.list_predicate,
        $.property_access,
        $.binary_expression,
        $.unary_expression,
        $.postfix_expression,
        $.case_expression,
        $.match_expression,
        $.subquery_expression,
        $.window_function,
        seq("(", $._expression, ")"),
      ),

    binary_expression: ($) =>
      choice(
        prec.left(12, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(14, seq($._expression, choice("*", "/", "%"), $._expression)),
        prec.left(
          10,
          seq($._expression, choice("<", ">", "<=", ">="), $._expression),
        ),
        prec.left(15, seq($._expression, "??", $._expression)),
        prec.left(
          8,
          seq(
            $._expression,
            choice(
              "==",
              "=",
              "!=",
              "IS",
              "LIKE",
              "ILIKE",
              "MATCHES",
              "IMATCHES",
            ),
            $._expression,
          ),
        ),
        prec.left(6, seq($._expression, choice("&&", "AND"), $._expression)),
        prec.left(4, seq($._expression, choice("||", "OR"), $._expression)),
        prec.left(7, seq($._expression, "IN", $._expression)),
      ),

    _data_type: ($) =>
      choice(
        "String",
        "Int",
        "Int32",
        "Float",
        "Bool",
        "Date",
        "UUID",
        "Interval",
        "Time",
        "Path",
        seq(
          "Decimal",
          optional(seq("(", $.integer_literal, ",", $.integer_literal, ")")),
        ),
        seq("Vector", "<", $.integer_literal, ">"),
        seq("List", "<", $._data_type, ">"),
        seq("Enum", "<", $.dotted_identifier, ">"),
        seq("Struct", "<", $.dotted_identifier, ">"),
        $.dotted_identifier,
      ),

    decorator: ($) =>
      seq(
        "@",
        $.identifier,
        optional(
          choice(
            seq("(", commaSep1($._expression), ")"),
            seq("(", "TRAVERSE", ")", "{", $.manipulation_statement, "}"),
          )
        ),
      ),

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(token.immediate(prec(1, /[^\\"\n]+/)), $.escape_sequence),
        ),
        '"',
      ),

    integer_literal: ($) =>
      token(
        choice(
          /[0-9]+(_[0-9]+)*/,
          /0[xX][0-9a-fA-F]+(_[0-9a-fA-F]+)*/,
          /0[bB][01]+(_[01]+)*/,
          /0[oO][0-7]+(_[0-7]+)*/,
        ),
      ),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    namespace_identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_.]*/,
